add result filter

--- a/app/app.css
+++ b/app/app.css
@@ -38,7 +38,8 @@
     width: 300px;
 }
 
-/*  itMultiSelect   */
+/*  itMultiSelect
+*****************************************************/
 .it-selector-list {
     right: 0;
     max-height: 315px;
